--- a/test/index.html
+++ b/test/index.html
@@ -52,6 +52,14 @@
 </head>
 
 <body id="page-top">
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.6";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
@@ -97,8 +105,7 @@
                 <hr>
                 <p>Log in using your Facebook Account now! </p>
                 <hr>
-                <fb:login-button size="3x" scope="public_profile,email" onlogin="checkLoginState();">
-            	</fb:login-button>
+                <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="true" data-auto-logout-link="false"></div>
             	<hr>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
