--- a/test/index.html
+++ b/test/index.html
@@ -99,13 +99,15 @@
     <header>
         <div class="header-content">
 	    
-            <div id='status'></div>
+            
             <div class="header-content-inner">
                 <h1>Get  your family tree with a single sign up</h1>
                 <hr>
                 <p>Log in using your Facebook Account now! </p>
                 <hr>
-                <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="true" data-auto-logout-link="false"></div>
+                <div id='status'></div>
+                <hr>
+                <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="true" data-auto-logout-link="false" auto;></div>
             	<hr>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
