--- a/test/index.html
+++ b/test/index.html
@@ -90,7 +90,7 @@
 
     <header>
         <div class="header-content">
-	    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+	    <fb:login-button scope="public_profile,email,user_friends,user_relationships,user_relationship_details" onlogin="checkLoginState();">
             </fb:login-button>
             <div id='status'></div>
             <div class="header-content-inner">
